@@ -10,6 +10,8 @@ Revision history for {{ $dist->name }}:
   [Tests]
   - Ensure chrome services are closed when tests finish.
 
+  - Skip tests if Chrome browser cannot be started.
+
 v0.1.2    2020-10-14 15:01:42+01:00 Europe/London
   [Bug Fixes]
   - The User-Agent header is forwarded as X-Forwarded-User-Agent, GH#1.
